# ImgToASCII

./: Makefile  README.md
program/: CMakeLists.txt  Makefile
program/src/: Image.cpp  Image.h  main.cpp
